[package]
name = "tauri-map"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
warp = "0.3"
rusqlite = { version = "0.29", features = ["bundled"] }
flate2 = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
tauri-plugin-http = "2.4.4"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
